<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Not Found"
            android:textColor="#2f2f2f"
            android:textSize="18sp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/clearListButton"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/clear_list"/>

    </RelativeLayout>

</LinearLayout>