...

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="Ladarat"
                android:textColor="#030303"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
...
            <TextView
                android:id="@+id/textAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:lines="1"
                android:text="20"
                android:textColor="#030303"
                android:textSize="18dp" />
        </LinearLayout>

    </LinearLayout>

...
