...
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="9"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools">
            <SeekBar
                android:max="60"
                android:progress="0"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginLeft="8dp"
...
